added pug and scss

--- a/TODO
+++ b/TODO
@@ -1,7 +1,14 @@
 Must have:
-
+    ☐ connect to the bluetooth
+    ☐ Save scores to azure
+    ☐ run offline
+    ☐ sync background
+    ☐ over of old games
+    ☐ start a new game
+    
 Should Have:
-
+    ☐ run locally
+    
 Could Have:
 
 Would like:
