--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Todo:
+    ☐ Update Readme.md
     
     ☐ Overview page
     ☐ Counting page 
@@ -17,6 +18,7 @@ Todo:
 
     ✔ run locally @done(19-04-05 13:58)
     
+  
 Archive:
 
 
