--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 Todo:
+    for demo:
+        ☐ remove list on overview
+        ☐ add code (hidden) to request.
+
     Styling:
         ☐ Add styling for list @high
 
