--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ Todo:
     for demo:
         ☐ remove list on overview
         ☐ add code (hidden) to request.
+        ☐ score start at 0
 
     Styling:
         ☐ Add styling for list @high
